syntax = "proto3";

package akamai;
option go_package = "github.com/letsencrypt/boulder/akamai/proto";

import "google/protobuf/empty.proto";

service AkamaiPurger {
  rpc Purge(PurgeRequest) returns (google.protobuf.Empty) {}
}

message PurgeRequest {
  repeated string urls = 1;
}
